<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/app_name"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/explicacio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/explicacion"
        android:textSize="14sp"
        android:visibility="visible"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/textPos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="51dp"
        android:text="@string/calcular"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRes" />

    <TextView
        android:id="@+id/textPos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="31dp"
        android:text="@string/posicion"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textAvis"
        app:layout_constraintEnd_toStartOf="@+id/posicio"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explicacio" />

    <TextView
        android:id="@+id/textRes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="44dp"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/boton"
        app:layout_constraintEnd_toStartOf="@+id/resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAvis" />

    <EditText
        android:id="@+id/posicio"
        android:layout_width="201dp"
        android:layout_height="0dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textAvis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAvis"
        android:layout_width="363dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="310dp"
        android:text="@string/aviso"
        android:textSize="18sp"
        android:visibility="invisible"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posicio" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:visibility="visible"
        app:fontFamily="sans-serif"
        app:layout_constraintBaseline_toBaselineOf="@+id/textRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRes" />
</android.support.constraint.ConstraintLayout>